Avoid relayout due to server/client variance by using margins instead of text for homepage button spacing

--- a/src/style/index.less
+++ b/src/style/index.less
@@ -265,10 +265,19 @@ main .markup {
 		}
 	}
 
+	.home-button {
+		margin: 0 1rem;
+	}
+
+	.home-button-sep {
+		display: none;
+	}
+
 	@media (max-width: 600px) {
 		.home-button-sep {
 			display: block;
 			height: 0;
+			width: auto;
 			margin-bottom: 1.3em;
 			overflow: hidden;
 		}
